<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentLineChartBinding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.linechart.LineChartFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/vBtnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vTvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chart_header"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/vgChooseCurrencyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_border"
        android:orientation="horizontal"
        android:paddingStart="4dp"
        android:paddingTop="2dp"
        android:paddingEnd="20dp"
        android:paddingBottom="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/vIvCurrencyFlag"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/ic_usd" />

        <TextView
            android:id="@+id/vTvCurrencyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/currency_name"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vgCurrentRate"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vBtnBack">

        <TextView
            android:id="@+id/vTvWhen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_when"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/vTvCurrentRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_rate"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vgInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:background="#D2E7F8"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vgCurrentRate">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales"
            android:textColor="#999999" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/vTvSalesCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales_value"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vTvEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/edit"
            android:textColor="#999999" />

        <TextView
            android:id="@+id/vTvEditValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/edit_value"
            android:textColor="#4CAF50" />

        <TextView
            android:id="@+id/vTvUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/update"
            android:textColor="#999999" />

        <TextView
            android:id="@+id/vTvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/datetime"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <com.github.chartcore.view.ChartCoreView
        android:id="@+id/chartCore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vgInfoLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chartCore">

        <TextView
            android:id="@+id/vBtnWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:background="@drawable/round_button_shape"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:text="@string/week"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/vBtnMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:background="@drawable/chart_button_border"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:text="@string/month"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/vBtnQuarter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:background="@drawable/chart_button_border"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:text="@string/quarter"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>